fix: demo workflow

--- a/.github/workflows/notify.yml
+++ b/.github/workflows/notify.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Send Telegram Notification on New Release
-        uses: your-username/telegram-github-action@main
+        uses: cbrgm/telegram-github-action@v1
         with:
           token: ${{ secrets.TELEGRAM_TOKEN }}
           to: ${{ secrets.TELEGRAM_CHAT_ID }}
