--- a/.github/workflows/go-binaries.yml
+++ b/.github/workflows/go-binaries.yml
@@ -44,4 +44,5 @@ jobs:
         with:
           generate_release_notes: true
           files: "dist/*"
+          token: ${{ secrets.BOT_PAT_TOKEN }}
 ...
