--- a/.github/workflows/go-binaries.yml
+++ b/.github/workflows/go-binaries.yml
@@ -45,4 +45,9 @@ jobs:
           generate_release_notes: true
           files: "dist/*"
           token: ${{ secrets.BOT_PAT_TOKEN }}
+
+      - name: Update version
+        uses: nowactions/update-majorver@v1
+        if: startsWith(github.ref, 'refs/tags/v')
+
 ...
