--- a/action.yml
+++ b/action.yml
@@ -9,7 +9,7 @@ inputs:
   to:
     description: 'Unique identifier for the target chat'
     required: true
-  thread_id:
+  thread-id:
     description: "For supergroups. Topic identifier."
     required: false
   message:
@@ -47,7 +47,7 @@ runs:
     - --parse-mode
     - ${{ inputs.parse-mode }}
     - --to=${{ inputs.to }}
-    - --thread_id=${{ inputs.thread_id }}
+    - --thread-id=${{ inputs.thread-id }}
     - --disable-web-page-preview=${{ inputs.disable-web-page-preview }}
     - --disable-notification=${{ inputs.disable-notification }}
     - --protect-content=${{ inputs.protect-content }}
